base/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mg-flask-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: mg-flask-backend
  type: NodePort
  ports:
    - port: 80 # 서비스가 생성할 포트  
      targetPort: 80 # 서비스가 접근할 pod의 포트
      protocol: TCP
